# SkyScan

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2a26550b39e4_create_users_and_search_history_tables.py  cddde664ee49_rename_search_history_search_at_.py
app/: main.py  middleware.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  search_history.py  user.py
app/routers/: api.py  web.py
app/schemas/: history.py  weather.py
app/services/: __init__.py  weather.py
app/templates/: index.html
tests/: conftest.py  test_api.py  test_full_flow.py  test_history_stats.py  test_weather_service.py  test_web.py
