[tool.poetry]
name = "skyscan"
version = "0.1.0"
description = ""
authors = ["MIR <mirazimov.kr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
httpx = "^0.28.1"
pydantic = ">=2.0"
sqlalchemy = ">=2.0"
alembic = "^1.16.1"
jinja2 = "^3.1.6"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
pre-commit = "^4.2.0"
isort = "^6.0.1"
black = "^25.1.0"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
